modified:   index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <ul class="text-center nav-honey">
                     <li>
-                        <a  href="index.html">Home</a>
+                        <a  href="#home">Home</a>
                     </li>
                     <li>
                         <a class="scroll" href="#about">About</a>
